# torosamy_hearvy_pancake

./: .gitignore  build.sh  package.sh  version.txt
scripts/start/: start-automatic-aiming.sh  start-navigation-client.sh  start-navigation-server.sh  start-serial-port.sh
src/torosamy_automatic_aiming/: CMakeLists.txt  package.xml
src/torosamy_automatic_aiming/include/torosamy_automatic_aiming/: ArmorModule.h
src/torosamy_automatic_aiming/include/torosamy_automatic_aiming/armor/: Armor.h  ArmorManager.h
src/torosamy_automatic_aiming/include/torosamy_automatic_aiming/light/: LightManager.h
src/torosamy_automatic_aiming/include/torosamy_automatic_aiming/ros/: ShootPublisher.h  ShootSubscriber.h
src/torosamy_automatic_aiming/src/: ArmorModule.cpp  main.cpp
src/torosamy_automatic_aiming/src/armor/: Armor.cpp  ArmorFilter.cpp  ArmorManager.cpp
src/torosamy_automatic_aiming/src/handler/: FireControlHandler.cpp
src/torosamy_automatic_aiming/src/light/: Light.cpp  LightManager.cpp
src/torosamy_automatic_aiming/src/ros/: ShootPublicher.cpp  ShootSubscriber.cpp
src/torosamy_navigation/torosamy_navigation_client/: CMakeLists.txt  package.xml
src/torosamy_navigation/torosamy_navigation_client/include/: NavigationDecision.h
src/torosamy_navigation/torosamy_navigation_client/src/: NavigationDecision.cpp  main.cpp
src/torosamy_navigation/torosamy_navigation_server/costmap_converter/: CMakeLists.txt  package.xml
src/torosamy_navigation/torosamy_navigation_server/costmap_converter/include/costmap_converter/: costmap_converter_interface.h
src/torosamy_navigation/torosamy_navigation_server/costmap_converter/include/costmap_converter/costmap_to_dynamic_obstacles/: blob_detector.h
src/torosamy_navigation/torosamy_navigation_server/costmap_converter/src/: costmap_converter_node.cpp
src/torosamy_navigation/torosamy_navigation_server/costmap_converter/src/costmap_to_dynamic_obstacles/: blob_detector.cpp  costmap_to_dynamic_obstacles.cpp
src/torosamy_navigation/torosamy_navigation_server/linefit_ground_segmentation/: CMakeLists.txt  package.xml
src/torosamy_navigation/torosamy_navigation_server/livox_ros_driver2/src/: CMakeLists.txt
src/torosamy_navigation/torosamy_navigation_server/livox_ros_driver2/src/src/: lddc.cpp
src/torosamy_navigation/torosamy_navigation_server/pb_omni_pid_pursuit_controller/: package.xml
src/torosamy_navigation/torosamy_navigation_server/pb_omni_pid_pursuit_controller/include/pb_omni_pid_pursuit_controller/: omni_pid_pursuit_controller.hpp
src/torosamy_navigation/torosamy_navigation_server/pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp
src/torosamy_navigation/torosamy_navigation_server/point_lio/: CMakeLists.txt
src/torosamy_navigation/torosamy_navigation_server/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py  sample_laserscan_to_pointcloud_launch.py  sample_pointcloud_to_laserscan_launch.py
src/torosamy_navigation/torosamy_navigation_server/pointcloud_to_laserscan/src/: laserscan_to_pointcloud_node.cpp  pointcloud_to_laserscan_node.cpp
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_map_builder/: CMakeLists.txt  package.xml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_map_builder/config/: navigation.yaml  point_lio.yaml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_map_builder/launch/: start.py  start_navigation.py
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_map_builder/urdf/torosamy_hearvy_pancake/: robot.urdf.xacro
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/: CMakeLists.txt  package.xml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/config/: MID360.json  mapping.yaml  measurement.yaml  mid360.yaml  navigation.rviz  navigation.yaml  point_lio.yaml  robot_pose.yaml  segmentation.yaml  small_gicp_relocalization.yaml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/launch/: start.py  start_localization.py  start_navigation.py
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/maps/base/: map.data  map.pgm  map.yaml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/maps/test/: map.data  map.pgm  map.yaml
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/urdf/torosamy_hearvy_pancake/: robot.urdf.xacro
src/torosamy_navigation/torosamy_navigation_server/torosamy_navigation_server_launcher/urdf/torosamy_little_pancake/: robot.urdf.xacro
src/torosamy_robomaster_sdk/config/: config.yml
src/torosamy_robomaster_sdk/config/camera/: 0.yml  1.yml  2.yml  DahuaCameraDemo.yml  MindCameraDemo.yml  VideoCameraDemo.yml  VirtualCameraDemo.yml
src/torosamy_robomaster_sdk/config/module/armor/: config.yml  target_blue_config.yml  target_red_config.yml
src/torosamy_robomaster_sdk/config/module/navigation/: config.yml  navigate_through_poses_w_replanning_and_recovery.xml
src/torosamy_robomaster_sdk/config/module/uart/: config.yml
src/torosamy_robomaster_sdk/config/serial-port/: 0.yml  1.yml
src/torosamy_ros_msgs/: CMakeLists.txt  package.xml
src/torosamy_ros_msgs/msg/: NavigationClient.msg  ObstacleArrayMsg.msg  RefereeSystemMsg.msg  SendDataMsg.msg
src/torosamy_serial_port/: CMakeLists.txt  package.xml
src/torosamy_serial_port/include/: HeartJumpModule.h  SerialPortDecorator.h
src/torosamy_serial_port/include/packet/: NavigationPacket.h  ReceiveDataPacket.h  RefereeSystemPacket.h  SendDataPacket.h
src/torosamy_serial_port/src/: HeartJumpModule.cpp  SerialPortDecorator.cpp  main.cpp
src/torosamy_serial_port/src/packet/: NavigationPacket.cpp  ReceiveDataPacket.cpp  RefereeSystemPacket.cpp  SendDataPacket.cpp
