<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>torosamy_navigation_server_launcher</name>
  <version>0.0.0</version>
  <description>bring up torosamy`s navigation server</description>
  <maintainer email="tgcyweyiang@gmail.com">torosamy</maintainer>
  <license>TODO: License declaration</license>
  <license>MIT</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
